--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <meta name="theme-color" content="#00C2FF" />
     <meta
       name="Description"
       content="Filip Kaštovský, Web Developer, Ostrava, Czech Republic"
     />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon.ico"
+      type="image/x-icon"
+    />
 
     <title>Filip Kaštovský | Web Developer</title>
   </head>
